Archive2/7b/f0cdd049214491/output
main.cpp: In function 'int main()':
main.cpp:11:12: error: call of overloaded 'cm(const char [8])' is ambiguous
     cm(ccar);
            ^
main.cpp:11:12: note: candidates are:
main.cpp:3:6: note: void cm(const char (&)[8])
 void cm(const char (&h)[8]) 
      ^
main.cpp:5:6: note: void cm(const char*)
 void cm(const char * h)
      ^
